tablas creadas, tengo sueño, ni me gaste en probar si anda la consulta de creacion :D

--- a/StatePattern/nbproject/private/private.properties
+++ b/StatePattern/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Diego\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+file.reference.sqlitejdbc-v056.jar-1=C:\\Users\\Aldi Vaca\\Documents\\UTN\\2014\\DSI\\QuintaEntregaPPAI\\implementacionDSI\\StatePattern\\nbproject
+user.properties.file=C:\\Users\\Aldi Vaca\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
