--- a/StatePattern/nbproject/project.properties
+++ b/StatePattern/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/StatePattern.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.sqlitejdbc-v056.jar=..\\..\\..\\..\\TSB\\Archivos TPU\\TSB-TP\\TSB_TPUnico\\sqlitejdbc-v056.jar
 file.reference.sqlitejdbc-v056.jar-1=C:\\Users\\Diego\\Documents\\NetBeansProjects\\TSB-TP\\TSB_TPUnico\\sqlitejdbc-v056.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlitejdbc-v056.jar-1}
+    ${file.reference.sqlitejdbc-v056.jar-1}:\
+    ${file.reference.sqlitejdbc-v056.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
