--- a/StatePattern/nbproject/private/private.properties
+++ b/StatePattern/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 compile.on.save=true
-file.reference.sqlitejdbc-v056.jar=C:\\Users\\Aldi Vaca\\Documents\\UTN\\2014\\DSI\\QuintaEntregaPPAI\\implementacionDSI\\StatePattern\\sqlitejdbc-v056.jar
-file.reference.sqlitejdbc-v056.jar-1=C:\\Users\\Aldi Vaca\\Documents\\UTN\\2014\\DSI\\QuintaEntregaPPAI\\implementacionDSI\\StatePattern\\sqlitejdbc-v056.jar-1
+file.reference.sqlitejdbc-v056.jar=C:\\Users\\Diego\\Documents\\NetBeansProjects\\TSB-TP\\TSB_TPUnico\\sqlitejdbc-v056.jar
+file.reference.sqlitejdbc-v056.jar-1=C:\\Users\\Diego\\Documents\\NetBeansProjects\\TSB-TP\\TSB_TPUnico\\sqlitejdbc-v056.jar
 user.properties.file=C:\\Users\\Aldi Vaca\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
